maze.island.IslandMaze.scala.error
Compilation error:
IslandMaze:16: error: value =! is not a member of plm.universe.Direction
  while (getDirection() =! Direction.NORTH) {
                        ^